# dewereldvan.ai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-e2e.txt  requirements.txt
alembic/: env.py
app/: __init__.py  config.py  csrf.py  db.py  deps.py  main.py  mcp_server.py  security.py
context/: architecture.md  decisions.md  status.md  techstack.md
docs/: BACKUP-RESTORE.md  PRD-agenda-events.md  PRD-agent-shell.md  PRD-ai-profiel.md  PRD-concierge-intelligentie.md  PRD-concierge.md  PRD-conversationele-profielbouw.md  PRD-discovery-verdieping.md  PRD-discovery.md  PRD-ervaring.md  PRD-hero-studio.md  PRD-hero-video.md  PRD-ledenpagina.md  PRD-matchmaking.md  PRD-mcp.md  PRD-notificaties.md  PRD-open-showcase.md  PRD-publieke-demo.md  PRD-schrijf-surfaces.md  PRD-scout.md  PRD-verificatie-links.md  PRD.md  SPEC-agent-shell-fase1.md  SPEC-frontend-polish.md  SPEC-home-navigatie.md  SPEC-living-profielbouw.md  STYLEGUIDE.md  VISION-profielbouw.md
scripts/: announce_features.py  backup-db.sh  healthcheck.sh  nightly-jobs.sh  seed_roadmap.py  test-postgres.sh
teaser/: .dockerignore  Dockerfile  app.py  docker-compose.yml  index.html
tests/: _ai_helpers.py  _route_helpers.py  conftest.py  test_account_deletion.py  test_admin_members.py  test_agenda_nieuws.py  test_agent_shell_fase1.py  test_ai_profile_imports.py  test_ai_profile_model.py  test_ai_profile_routes.py  test_ai_profile_schema.py  test_app_smoke.py  test_approval.py  test_concierge.py  test_email.py  (+59 more)
(+356 files in other folders)
